# Project

./: .travis.yml  Makefile  Makefile.in  Makefile_s  client.c  config.status  configure  configure.ac  create_hashtable.c  hesh.c  lib.c  out_table.txt  server.c  server.h  sin_table.txt  val_table.txt
autom4te.cache/: output.0  output.1  traces.0  traces.1
include/: header.h
lib/: Makefile  Makefile.am  ex.c  hash.c  interface.c  lib.c  val_table.txt
module/: ex.c
src/: Makefile  Makefile.am  Makefile.in  client.c  out_table.txt  server.c  server_err.c  sin_table.txt
src/.deps/: client.Po  hash.Po  interface.Po  lib.Po  server.Po
